fix(margin): remove data explorer's margins to align header

--- a/src/DataExplorer/DataExplorer.less
+++ b/src/DataExplorer/DataExplorer.less
@@ -2,7 +2,7 @@
 
 .data-explorer {
   display: flex;
-  margin: 17px 30px 34px 30px;
+  margin: 17px 0 34px 0;
 }
 
 .data-explorer__filters {
